--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-config.local/* filter=strongbox diff=strongbox
+config.local/** filter=strongbox diff=strongbox
+commands.local/** filter=strongbox diff=strongbox
+files.local/** filter=strongbox diff=strongbox
